Bug 1139949 - Make the small swatch of current theme in the themes button smaller and rounded. ui-r=phlsa, r=Gijs, a=lizzard

--- a/browser/themes/shared/customizableui/customizeMode.inc.css
+++ b/browser/themes/shared/customizableui/customizeMode.inc.css
@@ -164,6 +164,13 @@
   -moz-margin-start: 6px !important;
 }
 
+#customization-lwtheme-button > .box-inherit > .box-inherit > .button-icon {
+  width: 20px;
+  height: 20px;
+  border-radius: 2px;
+  background-size: contain;
+}
+
 #customization-titlebar-visibility-button > .button-box > .button-icon {
   vertical-align: middle;
 }
